--- a/src/soniox-live-preview/index.html
+++ b/src/soniox-live-preview/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Soniox Live Preview</title>
+    <title>Live Preview</title>
     <style>
       html,
       body {
@@ -11,7 +11,7 @@
         width: 100%;
         height: 100%;
         overflow: hidden;
-        background: transparent;
+        background: #141414;
       }
       #root {
         width: 100%;
